--- a/src/app/components/shared/auth/home-redirect/home-redirect.component.html
+++ b/src/app/components/shared/auth/home-redirect/home-redirect.component.html
@@ -1,1 +1,41 @@
 <p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
+<p>home-redirect works!</p>
