--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,22 @@
 @import "../styles/variables.scss";
 
-.layout-wrapper {
+.page {
+  min-height: 100vh;
   display: flex;
-  align-items: stretch;
-  width: 100%;
+  flex-direction: column;
   background-color: $color-cream;
+}
+
+.layout-wrapper {
+  flex: 1; /* take remaining height after header */
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 .side-image {
   width: 100px; /* adjust to your image width */
   background-repeat: repeat-y;
-  background-size: contain;
   background-color: $color-cream;
 }
 
