--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <div>
     <a
       class="ms-3"
-      [routerLink]=""
+      [routerLink]="''"
       routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
     >
