Add Styling and Icons

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,6 +22,8 @@
 
 .side-image.left {
   background-image: url("/assets/images/col-right2.png");
+  width: 13%;
+  margin-left: -10px;
 }
 
 .side-image.right {
