--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -19,7 +19,13 @@ a {
   margin-right: 7px;
 }
 
-img {
+.linear-icon{
   width: 35px;
   padding: 0px;
 }
+.fill-icon{
+  width: 25px;
+  padding: 0px;
+}
+
+
