--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="layout-wrapper d-flex justify-content-between">
     <div class="side-image left"></div>
 
-    <div class="d-flex flex-column justify-content-between">
+    <div class="d-flex flex-column justify-content-between w-100">
       <router-outlet></router-outlet>
       <footer>
         <app-footer></app-footer>
