--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="page" [class.rtl]="lang === 'ar'">
+<div class="page">
   <header><app-header></app-header></header>
   <div class="layout-wrapper">
     <div class="side-image left"></div>
-    <div class="main-content" [attr.dir]="lang">
+    <div class="main-content mt-3">
       <router-outlet></router-outlet>
       <footer>
         <app-footer></app-footer>
