--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,31 +8,45 @@
 }
 
 .layout-wrapper {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: stretch;
-  direction: ltr; // This fixes the layout to always behave LTR
+}
+
+.side-image.left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100px;
+  background-image: url("/assets/images/column-right.png");
+}
+
+.side-image.right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100px;
+  background-image: url("/assets/images/column-left.png");
 }
 
 .main-content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
+  margin: 0 100px;
 }
 
 .side-image {
-  width: 100px; /* adjust to your image width */
+  width: 100px;
   background-repeat: repeat-y;
   background-color: $color-cream;
 }
-
-.side-image.left {
-  background-image: url("/assets/images/column-right.png");
-}
-
-.side-image.right {
-  background-image: url("/assets/images/column-left.png");
+footer{
+  margin-top: auto;
 }
