--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -1,1 +1,120 @@
-<p>reservations works!</p>
+<div class="page">
+  <h1 class="m-4 mb-4">{{ "reservation.pending-reservations" | translate }}</h1>
+  <div class="rounded-4 shadow border overflow-hidden mb-5">
+    <table class="table table-striped table-bordered mb-0">
+      <thead>
+        <tr>
+          <th>{{ "shared.entity.id" | translate }}</th>
+          <th>{{ "user.name" | translate }}</th>
+          <th>{{ "room.title" | translate }}</th>
+          <th>{{ "room.type" | translate }}</th>
+          <th>{{ "room.floor" | translate }}</th>
+          <th>{{ "room.price" | translate }}</th>
+          <th>{{ "shared.action.key-name" | translate }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for(reservation of pendingReservations; let i = $index; track i) {
+        <tr>
+          <td>{{ reservation?.id }}</td>
+          <td>{{ reservation?.customer?.name || "" }}</td>
+          <td>{{ reservation?.room?.title || "" }}</td>
+          <td>{{ reservation?.room?.roomType || "" }}</td>
+          <td>{{ reservation?.room?.floor }}</td>
+          <td>{{ reservation?.room?.price }}</td>
+          <td>
+            <button
+              class="details"
+              (click)="showReservationDetails(reservation.id)"
+            >
+              <!-- <i class="bi bi-info-circle h5"></i> -->
+              <i class="bi bi-info-circle-fill h5"></i>
+              <!-- {{ "shared.action.details" | translate }} -->
+            </button>
+            <button
+              class="approve"
+              (click)="ApproveReservationRequest(reservation.id, reservation)"
+            >
+              <!-- <i class="bi bi-check-circle h5"></i> -->
+              <i class="bi bi-check-circle-fill h5"></i>
+              <!-- {{ "shared.action.approve" | translate }} -->
+            </button>
+            <button
+              class="reject"
+              (click)="RejectReservationRequest(reservation.id, reservation)"
+            >
+              <!-- <i class="bi bi-x-circle-fill h5"></i> -->
+              <i class="bi bi-x-circle-fill h5"></i>
+              <!-- {{ "shared.action.reject" | translate }} -->
+            </button>
+          </td>
+        </tr>
+
+        }
+      </tbody>
+    </table>
+  </div>
+
+  <h1 class="m-4 mb-4">{{ "reservation.active-reservations" | translate }}</h1>
+  <div class="rounded-4 shadow border overflow-hidden">
+    <table class="table table-striped table-bordered mb-0">
+      <thead>
+        <tr>
+          <th>{{ "shared.entity.id" | translate }}</th>
+          <th>{{ "user.name" | translate }}</th>
+          <th>{{ "room.title" | translate }}</th>
+          <th>{{ "room.type" | translate }}</th>
+          <th>{{ "room.floor" | translate }}</th>
+          <th>{{ "room.price" | translate }}</th>
+          <th>{{ "shared.action.key-name" | translate }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for(reservation of activeReservations; let i = $index; track i) {
+        <tr>
+          <td>{{ reservation?.id }}</td>
+          <td>{{ reservation?.customer?.name || "" }}</td>
+          <td>{{ reservation?.room?.title || "" }}</td>
+          <td>{{ reservation?.room?.roomType || "" }}</td>
+          <td>{{ reservation?.room?.floor }}</td>
+          <td>{{ reservation?.room?.price }}</td>
+          <td>
+            <button
+              class="details"
+              (click)="showReservationDetails(reservation.id)"
+            >
+              <!-- <i class="bi bi-info-circle h5"></i> -->
+              <i class="bi bi-info-circle-fill h5"></i>
+              <!-- {{ "shared.action.details" | translate }} -->
+            </button>
+          </td>
+        </tr>
+
+        }
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<p-toast />
+<p-confirmdialog #cd>
+  <ng-template pTemplate="footer">
+    <button
+      type="button"
+      pButton
+      icon="pi pi-times"
+      label="Delete"
+      [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
+      (click)="cd.onAccept()"
+    ></button>
+
+    <button
+      type="button"
+      pButton
+      icon="pi pi-check"
+      label="Cancel"
+      [ngStyle]="{ backgroundColor: '#90c67c', border: 'green' }"
+      (click)="cd.onReject()"
+    ></button>
+  </ng-template>
+</p-confirmdialog>
