--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -1,1 +1,56 @@
-<p>manage-users works!</p>
+<div class="page">
+  <h1 class="m-4 mb-4">{{ "user.roles.users" | translate }}</h1>
+  <div class="rounded-4 shadow border overflow-hidden mb-5">
+    <table class="table table-striped table-bordered mb-0">
+      <thead>
+        <tr>
+          <th>{{ "shared.entity.id" | translate }}</th>
+          <th>{{ "user.name" | translate }}</th>
+          <th>{{ "user.email" | translate }}</th>
+          <th>{{ "user.phone" | translate }}</th>
+          <th>{{ "user.role" | translate }}</th>
+          <th>{{ "shared.action.key-name" | translate }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for(user of users; let i = $index; track i) {
+        <tr>
+          <td>{{ user.id }}</td>
+          <td>{{ user.name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.phone }}</td>
+          <td>{{ user.role }}</td>
+          <td>
+            <button class="details" (click)="ShowUserProfile(user.id)">
+              <i class="bi bi-person-lines-fill h5"></i>
+            </button>
+          </td>
+        </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+
+  <p-toast />
+  <p-confirmdialog #cd>
+    <ng-template pTemplate="footer">
+      <button
+        type="button"
+        pButton
+        icon="pi pi-times"
+        label="Delete"
+        [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
+        (click)="cd.onAccept()"
+      ></button>
+
+      <button
+        type="button"
+        pButton
+        icon="pi pi-check"
+        label="Cancel"
+        [ngStyle]="{ backgroundColor: '#90c67c', border: 'green' }"
+        (click)="cd.onReject()"
+      ></button>
+    </ng-template>
+  </p-confirmdialog>
+</div>
