--- a/src/app/components/shared/auth/profile/profile.component.scss
+++ b/src/app/components/shared/auth/profile/profile.component.scss
@@ -51,6 +51,25 @@ input {
   border-left: none;
 }
 
+.right-input .input-group-text {
+  border: 2px $color-dark-brown solid;
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+}
+
+.right-input input {
+  border: 2px $color-dark-brown solid;
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.form-control:focus {
+  box-shadow: none !important;
+  outline: none !important;
+  border: 2px $color-dark-brown solid;
+  border-left: none;
+}
+
 .error {
   color: #e74c4c;
   font-size: 14px;
