Change .approve and .reject Colors

--- a/src/app/components/admin/reservations/reservations.component.scss
+++ b/src/app/components/admin/reservations/reservations.component.scss
@@ -24,8 +24,8 @@ button {
   color: $color-caramel;
 }
 .approve {
-  color: #abf7b1;
+  color: #ADEBB3;
 }
 .reject {
-  color: #faa0a0;
+  color: #F88379;
 }
