--- a/src/app/components/customer/home/home.component.html
+++ b/src/app/components/customer/home/home.component.html
@@ -1,1 +1,6 @@
 <p>home works!</p>
+<a routerLink="/login" routerLinkActive="active">login</a>
+<br>
+<a routerLink="/signup" routerLinkActive="active">register</a>
+
+
