--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -23,19 +23,22 @@
       {{ "header.admin.manage-users" | translate }}
     </a>
     <a [routerLink]="`/rooms`" routerLinkActive="active-link">
-      <img class="fill-icon" src="/assets/images/bed-filled-icon.png" alt="room icon" />
+      <img
+        class="fill-icon"
+        src="/assets/images/bed-filled-icon.png"
+        alt="room icon"
+      />
       {{ "header.admin.rooms" | translate }}
     </a>
-    <a [routerLink]="`/dashboard`" routerLinkActive="active-link">
+    <a [routerLink]="`/reservations`" routerLinkActive="active-link">
       <img
-        class="linear-icon"
-        src="/assets/images/dashboard-filled-icon.png"
-        alt="dashboard icon"
+        class="linear-icon p-1"
+        src="/assets/images/reservations-filled-icon.png"
+        alt="reservations icon"
       />
-      {{ "header.admin.dashboard" | translate }}
+      {{ "header.admin.reservations" | translate }}
     </a>
-    } 
-    @if(role == 'Customer'){
+    } @if(role == 'Customer'){
     <a [routerLink]="`/my-reservations`" routerLinkActive="active-link">
       {{ "header.customer.my-reservations" | translate }}
     </a>
