--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -14,7 +14,7 @@
       {{ "app.title" | translate }}
     </a>
     @if(role == 'Admin'){
-    <a [routerLink]="`/manage-users`" routerLinkActive="active-link">
+    <a [routerLink]="`/admin/manage-users`" routerLinkActive="active-link">
       <img
         class="fill-icon"
         src="/assets/images/manage-users-filled-icon.png"
@@ -22,7 +22,7 @@
       />
       {{ "header.admin.manage-users" | translate }}
     </a>
-    <a [routerLink]="`/rooms`" routerLinkActive="active-link">
+    <a [routerLink]="`/admin/rooms`" routerLinkActive="active-link">
       <img
         class="fill-icon"
         src="/assets/images/bed-filled-icon.png"
@@ -30,7 +30,7 @@
       />
       {{ "header.admin.rooms" | translate }}
     </a>
-    <a [routerLink]="`/reservations`" routerLinkActive="active-link">
+    <a [routerLink]="`/admin/reservations`" routerLinkActive="active-link">
       <img
         class="linear-icon p-1"
         src="/assets/images/reservations-filled-icon.png"
@@ -38,7 +38,8 @@
       />
       {{ "header.admin.reservations" | translate }}
     </a>
-    } @if(role == 'Customer'){
+    } 
+    @if(role == 'Customer'){
     <a [routerLink]="`/my-reservations`" routerLinkActive="active-link">
       {{ "header.customer.my-reservations" | translate }}
     </a>
