--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -1,5 +1,13 @@
 <div class="page">
-  <h1 class="m-4 mb-4">{{ "user.roles.users" | translate }}</h1>
+  <div class="d-flex flex-row justify-content-between">
+    <h1 class="m-4 mb-4">{{ "user.roles.users" | translate }}</h1>
+    <button class="btn btn-primary m-4" (click)="AddEmployee()">
+      <i class="bi bi-person-plus-fill h4 m-1 align-middle"></i>
+      <span class="m-1 align-middle">{{
+        "user.add-employee" | translate
+      }}</span>
+    </button>
+  </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
       <thead>
@@ -21,7 +29,10 @@
           <td>{{ user.phone }}</td>
           <td>{{ user.role }}</td>
           <td>
-            <button class="details" (click)="ShowUserProfile(user.id)">
+            <button
+              class="details action-btn"
+              (click)="ShowUserProfile(user.id)"
+            >
               <i class="bi bi-person-lines-fill h5"></i>
             </button>
           </td>
@@ -30,27 +41,4 @@
       </tbody>
     </table>
   </div>
-
-  <p-toast />
-  <p-confirmdialog #cd>
-    <ng-template pTemplate="footer">
-      <button
-        type="button"
-        pButton
-        icon="pi pi-times"
-        label="Delete"
-        [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
-        (click)="cd.onAccept()"
-      ></button>
-
-      <button
-        type="button"
-        pButton
-        icon="pi pi-check"
-        label="Cancel"
-        [ngStyle]="{ backgroundColor: '#90c67c', border: 'green' }"
-        (click)="cd.onReject()"
-      ></button>
-    </ng-template>
-  </p-confirmdialog>
 </div>
