--- a/src/app/components/shared/auth/profile/profile.component.scss
+++ b/src/app/components/shared/auth/profile/profile.component.scss
@@ -1,21 +1,85 @@
 @import "../../../../../styles/variables.scss";
 
-.center-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.page {
+  max-width: 1300px;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
   background-color: white;
   margin: auto;
-  padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
   border-radius: 10px;
-  max-width: 900px;
+}
+
+.data-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin: 5px;
+}
+.data-title {
+  width: 15%;
+  font-weight: bold;
+  font-size: 20px;
+}
+.data {
+  width: 25%;
+  font-size: 20px;
+}
+
+.pfp-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -70px;
+  margin-bottom: -70px;
+}
+
+.pfp-parent {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+
+.pfp {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(-20px);
+  border-radius: 100%;
+  width: 170px;
+  height: 170px;
+}
+
+i.bi-camera-fill {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  border-radius: 50%;
+  padding: 6px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.profile-header-btn {
+  position: absolute;
+  right: -50px;
+  color: $color-dark-brown;
+  cursor: pointer;
+  margin: 0px;
+  align-self: center;
+}
+
+.center-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input-container {
@@ -77,16 +141,17 @@ input {
   margin-top: -6px;
   font-weight: bold;
 }
-
 button {
   text-decoration: none;
-  border: none;
+  width: auto;
+  margin: auto;
   font-size: 18px;
   border-radius: 7px;
   padding: 7px 10px;
-  width: auto;
-  margin: auto;
-  cursor: pointer;
+}
+
+.btn-submit {
+  border: none;
   background-color: $color-dark-brown;
   color: white;
 }
