Update Grid Style

--- a/src/app/components/admin/rooms/rooms.component.scss
+++ b/src/app/components/admin/rooms/rooms.component.scss
@@ -1,24 +1,25 @@
 @import "../../../../styles/variables.scss";
+.wrapper {
+  display: flex;
+  justify-content: center; // centers grid when it's smaller than container
+}
+
 .room-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 30px;
-  justify-content: center;
   padding: 30px;
   box-sizing: border-box;
+  max-width: 100%;
 }
 
 .room-container {
   position: relative;
-  display: inline-block;
-  //   width: 18%;
-  width: 300px;
+  width: 100%; // let grid control width
   height: 300px;
   border-radius: 5px;
   background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  //   margin: 1%;
-  margin: 10px 50px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
 }
 
 img {
