--- a/src/app/components/shared/auth/login/login.component.html
+++ b/src/app/components/shared/auth/login/login.component.html
@@ -28,12 +28,17 @@
       <small *ngIf="submitted && f['password'].errors?.['required']">Password is required.</small>
     </div>
 
-    <button type="submit">Login</button>
+ <div class="d-flex justify-content-center">
+    <button class="btn-primary" type="submit">Login</button>
+    </div>
+    <!-- <div class="d-flex justify-content-center">
+      <a routerLink="/forgot-password" style="font-weight: bold;">Forgot Password?</a>
+    </div> -->
   </form>
 
   <p style="text-align: center; margin-top: 1rem;">
     Don't have an account?
-    <a routerLink="/signup" style="color: #2a5298; font-weight: bold;">Sign up here</a>
+    <a routerLink="/signup" style="font-weight: bold;">Sign up here</a>
   </p>
 </div>
 
