--- a/src/app/components/shared/auth/sign-up/sign-up.component.scss
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.scss
@@ -1,9 +1,11 @@
+@import "../../../../../../src/styles/variables.scss";
+
 :host {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 75%;
-  background: linear-gradient(to right, #1e3c72, #2a5298);
+  background: linear-gradient(to right, #fbebd4);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -19,7 +21,7 @@ form {
 form h2 {
   text-align: center;
   margin-bottom: 1.5rem;
-  color: #2a5298;
+  color: $color-dark-brown;
 }
 
 div {
@@ -51,21 +53,25 @@ small {
   font-size: 0.75rem;
 }
 
-button[type='submit'] {
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #2a5298;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: #1e3c72;
-  }
+.btn-submit {
+  width: auto;
 }
+
+// button[type='submit'] {
+//   width: 100%;
+//   padding: 0.75rem;
+//   background-color: #2a5298;
+//   color: #fff;
+//   border: none;
+//   border-radius: 8px;
+//   font-weight: bold;
+//   cursor: pointer;
+//   transition: background-color 0.3s;
+
+//   &:hover {
+//     background-color: #1e3c72;
+//   }
+// }
 
 /* Optional: Style toast container from ngx-toastr */
 .toast-container {
