Clean Login, Signup, and Rooms Styles

--- a/src/app/components/admin/rooms/rooms.component.html
+++ b/src/app/components/admin/rooms/rooms.component.html
@@ -8,9 +8,9 @@
   </button>
 </div>
 
-<div class=" rooms-container" >
+<div class="rooms-container">
   @for(room of rooms; let i= $index; track i){
-  <div class=" room-card">
+  <div class="room-card">
     @if(role == 'Admin'){
     <i
       class="delete-icon bi bi-trash-fill h4"
@@ -22,7 +22,7 @@
     ></i>
     }
     <img class="room-img" [src]="room.imageUrl" />
-    <div class=" room-info">
+    <div class="room-info">
       <div class="room-content-header">
         <h4>{{ room.title }}</h4>
       </div>
@@ -47,20 +47,19 @@
       </div>
       <div>
         <strong class="me-2">{{ "room.price" | translate }}:</strong
-        >{{ room.price | currency:'USD':'symbol':'1.0-0' }}
+        >{{ room.price | currency : "USD" : "symbol" : "1.0-0" }}
       </div>
       @if(role != 'Admin'){
-       <button class="book-btn btn-primary">Book Now</button>
+      <button class="book-btn btn-primary">Book Now</button>
       }
-
     </div>
   </div>
   }
 </div>
 
 <ng-template #noRooms>
-    <p>No available rooms at the moment.</p>
-  </ng-template>
+  <p class="no-rooms-msg">No available rooms at the moment.</p>
+</ng-template>
 
 <p-toast />
 <p-confirmdialog #cd>
