--- a/src/app/components/shared/auth/login/login.component.html
+++ b/src/app/components/shared/auth/login/login.component.html
@@ -1,6 +1,3 @@
-
-  
-
 <ngb-toast
   *ngIf="showToast"
   header="Info"
@@ -18,27 +15,32 @@
     <div>
       <label>Email</label>
       <input formControlName="email" type="email" />
-      <small *ngIf="submitted && f['email'].errors?.['required']">Email is required.</small>
-      <small *ngIf="submitted && f['email'].errors?.['email']">Invalid email format.</small>
+      <small *ngIf="submitted && f['email'].errors?.['required']"
+        >Email is required.</small
+      >
+      <small *ngIf="submitted && f['email'].errors?.['email']"
+        >Invalid email format.</small
+      >
     </div>
 
     <div>
       <label>Password</label>
       <input formControlName="password" type="password" />
-      <small *ngIf="submitted && f['password'].errors?.['required']">Password is required.</small>
+      <small *ngIf="submitted && f['password'].errors?.['required']"
+        >Password is required.</small
+      >
     </div>
 
- <div class="d-flex justify-content-center">
-    <button class="btn-primary" type="submit">Login</button>
+    <div class="d-flex justify-content-center m-0">
+      <button class="btn-primary" type="submit">Login</button>
     </div>
     <!-- <div class="d-flex justify-content-center">
       <a routerLink="/forgot-password" style="font-weight: bold;">Forgot Password?</a>
     </div> -->
   </form>
 
-  <p style="text-align: center; margin-top: 1rem;">
+  <p style="text-align: center; margin-top: 1rem">
     Don't have an account?
-    <a routerLink="/signup" style="font-weight: bold;">Sign up here</a>
+    <a routerLink="/signup" style="font-weight: bold">Sign up here</a>
   </p>
 </div>
-
