--- a/src/app/components/shared/auth/login/login.component.scss
+++ b/src/app/components/shared/auth/login/login.component.scss
@@ -10,7 +10,7 @@
 
   h2 {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     color: $color-dark-brown;
   }
 
@@ -18,34 +18,34 @@
     display: flex;
     flex-direction: column;
 
-    div {
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      border: 1px solid #ccc;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      transition: border-color 0.3s;
+      background-color: white;
       margin-bottom: 1.5rem;
 
-      label {
-        display: block;
-        font-weight: 600;
-        margin-bottom: 0.5rem;
-      }
-
-      input {
-        width: 100%;
-        padding: 0.7rem 1rem;
-        border: 1px solid #ccc;
-        border-radius: 0.5rem;
-        font-size: 1rem;
-        transition: border-color 0.3s;
-        background-color:white;
-        
-        &:focus {
-          border-color: $color-dark-brown;
-          outline: none;
-        }
-      }
-
-      small {
-        color: red;
-        font-size: 0.8rem;
+      &:focus {
+        border-color: $color-dark-brown;
+        outline: none;
       }
     }
+
+    small {
+      color: red;
+      font-size: 0.8rem;
+    }
+  }
+  a {
+    color: $color-dark-brown;
   }
 }
