--- a/src/app/components/shared/auth/sign-up/sign-up.component.html
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.html
@@ -1,4 +1,3 @@
-
 <ngb-toast
   *ngIf="showToast"
   [class]="toastClass + ' position-fixed top-0 end-0 m-3'"
@@ -10,21 +9,22 @@
   {{ toastMessage }}
 </ngb-toast>
 
-
 <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
- <h2>Sign Up</h2>
+  <h2>Sign Up</h2>
   <div>
     <label>Name:</label>
-    <input formControlName="name" type="text">
+    <input formControlName="name" type="text" />
     <div *ngIf="submitted && f['name'].errors">
       <small *ngIf="f['name'].errors['required']">Name is required.</small>
-      <small *ngIf="f['name'].errors['minlength']">Name must be at least 3 characters.</small>
+      <small *ngIf="f['name'].errors['minlength']"
+        >Name must be at least 3 characters.</small
+      >
     </div>
   </div>
 
   <div>
     <label>Email:</label>
-    <input formControlName="email" type="email">
+    <input formControlName="email" type="email" />
     <div *ngIf="submitted && f['email'].errors">
       <small *ngIf="f['email'].errors['required']">Email is required.</small>
       <small *ngIf="f['email'].errors['email']">Enter a valid email.</small>
@@ -33,28 +33,37 @@
 
   <div>
     <label>Password:</label>
-    <input formControlName="password" type="password">
+    <input formControlName="password" type="password" />
     <div *ngIf="submitted && f['password'].errors">
-      <small *ngIf="f['password'].errors['required']">Password is required.</small>
-      <small *ngIf="f['password'].errors['minlength']">Minimum 6 characters.</small>
-      <small *ngIf="f['password'].errors['pattern']">Must contain uppercase letter and number.</small>
+      <small *ngIf="f['password'].errors['required']"
+        >Password is required.</small
+      >
+      <small *ngIf="f['password'].errors['minlength']"
+        >Minimum 6 characters.</small
+      >
+      <small *ngIf="f['password'].errors['pattern']"
+        >Must contain uppercase letter and number.</small
+      >
     </div>
   </div>
 
-<div>
-  <label>Confirm Password:</label>
-  <input formControlName="confirmPassword" type="password">
-  <div *ngIf="submitted && (f['confirmPassword'].errors || signUpForm.errors?.['mismatch'])">
-  <small *ngIf="f['confirmPassword'].errors?.['required']">Confirmation is required.</small>
-  <small *ngIf="!f['confirmPassword'].errors && signUpForm.errors?.['mismatch']">Passwords do not match.</small>
-</div>
-
-</div>
-
- <div class="d-flex justify-content-center">
-<button class="btn-primary btn-submit" type="submit">Sign Up</button>
+  <div>
+    <label>Confirm Password:</label>
+    <input formControlName="confirmPassword" type="password" />
+    <div
+      *ngIf="submitted && (f['confirmPassword'].errors || signUpForm.errors?.['mismatch'])"
+    >
+      <small *ngIf="f['confirmPassword'].errors?.['required']"
+        >Confirmation is required.</small
+      >
+      <small
+        *ngIf="!f['confirmPassword'].errors && signUpForm.errors?.['mismatch']"
+        >Passwords do not match.</small
+      >
+    </div>
   </div>
 
-
+  <div class="d-flex justify-content-center">
+    <button class="btn-primary" type="submit">Sign Up</button>
+  </div>
 </form>
-
